@@ -1,7 +1,10 @@
 1.3.6 - TBD
 
-* Added end stone bricks rendering.
-* Added grass path rendering.
+* Added rendering for the following Minecraft 1.9 block types:
+    + Purpur Block
+    + Purpur Pillar
+    + End Stone Bricks
+    + Grass Path
 * Added buttons to uniformly scale the 3D canvas.
 * Replaced the status text embedded in the render preview by an overlay label.
 * Added mob head rendering.
